# MiSTer_tty2rpi

./: .gitignore  .gitmodules  1-Setup-Raspberry_Pi.md  2-Setup-MiSTer.md  README.md  copy_all.sh  copy_mister.sh  copy_rpi.sh  copy_test.py
MISTER_games/: arcade  computer  console  games0  games1  games10  games2  games3  games4  games5  games6  games7  games8  games9
database/: Aamber Pegasus.csv  Atari 2600.csv  MAME_v1.csv  Microsoft MS-DOS.csv  Nintendo WiiWare.csv  Sega 32x.csv  Sony PlayStation.csv
files_mister/: tty2rpi-system.ini  tty2rpi-user.ini  tty2rpi.sh
files_rpi/tmp/home/tty2rpi/: tty2rpi.ini
files_rpi/tmp/home/tty2rpi/database/: AAE.csv  Arcade.csv  Astrocade.csv  GAMEBOY.csv  GBC.csv  Genesis.csv  MISTER_rbfs.csv  NES.csv  PSX.csv  SMS.csv  SNES.csv  Saturn.csv  ScummVM.csv  process.py
files_rpi/tmp/home/tty2rpi/marquee-pictures/: 000-UPDATE.ppm  BATOCERA-MENU.ppm  MAME-MENU.ppm  MENU.ppm  STARTUP.ppm  marble.ppm  resize.py  shutdown-mister.ppm
files_rpi/tmp/home/tty2rpi/tty2rpi-code/: CMakeLists.txt  main.cpp  png2ppm.py  resize.py
files_rpi/tmp/home/tty2rpi/tty2rpi-cpp/: Buttons.cpp  Buttons.h  CMakeLists.txt  Colour.h  FontManager.cpp  FontManager.h  Framebuffer.h  GameDatabase.cpp  GameDatabase.h  Image.cpp  Image.h  Rect.h  Socket.cpp  Socket.h  StringManip.cpp  StringManip.h  main.cpp
files_rpi/tmp/home/tty2rpi/tty2rpi-scripts/: CMDCOREXTRA.sh  CMDSHOWIPS.sh  game_database.py  image_builder.py  image_builder.py.old  log.py  rectangle.py  socktest.py  test.py  text.py  tty2rpi-cpp.sh  tty2rpi-inotify.sh  tty2rpi-python.sh  tty2rpi.py  (+1 more)
(+38 files in other folders)
